welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:1: error: not found: type boolean
def alarmClock(day : Int,  vacation : boolean) :String={
                                      ^alarmClock:9: error: type mismatch;
 found   : Int(10)
 required: String
        return 10
               ^alarmClock:14: error: type mismatch;
 found   : Int(10)
 required: String
      return 10
             ^alarmClock:17: error: type mismatch;
 found   : Int(10)
 required: String
        return 10
               ^alarmClock:19: error: type mismatch;
 found   : Int(7)
 required: String
        return 7
               ^